# fdbox

./: .gitignore  CMakeLists.txt  Makefile  Makefile.dj2  Makefile.ow  TCCONFIG.TC  applets.c  building.md  coding.md  configure.sh  fdbox.h  fdbox.prj  fdshell.prj  help.c  help.h  main.c  readme.md  readme.txt  tests.c
.github/workflows/: build.json  build.yml
dos/: TEST.c  beep.c  beep.h  call.c  call.h  cd.c  cd.h  cls.c  cls.h  cmd_dir.h  command.c  command.h  copy.c  copy.h  copymove.c  copymove.h  date.c  date.h  datetime.c  del.c  del.h  dir.c  dir.h  echo.c  echo.h  exit.c  exit.h  for.c  for.h  goto.c  goto.h  history.h  if.c  if.h  md.c  md.h  mv.c  mv.h  path.c  path.h  (+17 more)
etc/: autoexec.bat  build-ow.sh  create_dosbox_dir.sh  fdshell-qtcreator-indent.xml
lib/: applet.c  applet.h  args.c  args.h  environ.c  environ.h  readline.c  readline.h  strextra.c  strextra.h
lib/tc202/: DOS-GLOB.C  DOS-GLOB.H  malloc.h  stdbool.h  stdextra.c  stdextra.h
lib/win32/: dirent.h  win32-glob.c  win32-glob.h
src/: Makefile.dj2  Makefile.ow  applets.c  fdbox.h  help.c  main.c  tests.c
src/dos/: beep.c  call.c  cd.c  cls.c  cls.h  cmd_dir.h  command.c  command.h  copymove.c  datetime.c  del.c  del.h  dir.c  echo.c  echo.h  exit.c  for.c  goto.c  goto.h  history.c  if.c  if.h  md.c  path.c  path.h  prompt.c  prompt.h  reboot.c  rem.c  set.c  set.h  shift.c  type.c  type.h  ver.c  ver.h
src/lib/: applet.h  args.c  args.h  environ.c  environ.h  readline.c  readline.h  sglob.c  sglob.h  strextra.c  strextra.h
src/lib/serenityos/: serenity-glob.c  serenity-glob.h
src/lib/tc202/: dos-glob.c  dos-glob.h  malloc.h  stdextra.c  stdextra.h
src/lib/win32/: win32-glob.c  win32-glob.h
src/unix/: cal.c  cal.h  head.h  hexdump.c  pwd.h  tail.c
unix/: cal.c  cal.h  head.c  head.h  hexdump.c  hexdump.h  tail.c  tail.h
